# openguardrails

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  DESIGN_UPGRADE_SUMMARY.md  Dockerfile  GOVERNANCE.md  LICENSE  MONOREPO.md  README.md  RELEASING.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  entrypoint.sh  openclaw_dir  package-lock.json  package.json  pyproject.toml  supervisord.conf  tsconfig.base.json  tsconfig.json
.claude-plugin/: marketplace.json
.github/: DEPLOYMENT_CHECKLIST.md  FUNDING.yml
.github/workflows/: ci.yml  docker-release.yml  npm-publish.yml  publish-npm.yml  publish-pypi.yml  release.yml  test.yml  validate.yml
backend/: .env.example  .env.local.example  Dockerfile  admin_service.py  app.py  config.py  detection_service.py  diagnose_app_config.py  entrypoint.sh  fix_existing_apps.py  main.py  proxy_service.py  requirements.txt  start.py  start_admin_service.py  start_all_services.sh  test_application_risk_config.py  test_kb_model.py  test_proxy_detection.py  test_s6_config.py
backend/builtin_scanners/: owasp_top10.json  restricted_topics.json  sensitive_topics.json
backend/config/: sensitive_topics.json
backend/database/: connection.py  models.py
backend/i18n/: en.json  zh.json
backend/middleware/: billing_middleware.py
backend/migrations/: 010_multilingual_response_templates.py  011_init_global_entity_types.py  017_migrate_to_scanner_system.py  README.md  fix_response_templates.py  fix_s8_template.py  fix_templates_simple.py  run_migrations.py
backend/models/: requests.py  responses.py
backend/routers/: admin.py  appeal_api.py  appeal_router.py  applications.py  auth.py  ban_policy_api.py  billing.py  config_api.py  custom_scanners_api.py  dashboard.py  data_leakage_policy_api.py  data_security.py  detection_guardrails.py  dify_moderation.py  gateway_integration_api.py  gateway_policy_api.py  guardrails.py  media.py  model_direct_access.py  online_test.py  payment_api.py  proxy_api.py  proxy_management.py  purchase_api.py  results.py  risk_config_api.py  scanner_configs_api.py  scanner_packages_api.py  system_config.py  test_models.py  user.py  workspaces.py
backend/scripts/: diagnose_answer_match.py  diagnose_knowledge_base.py  fix_knowledge_base_config.py  init_postgres.py  init_postgres.sql  (+6 more)
benchmarks/: README.md
checkups/: README.md
cli/: package-lock.json  package.json
core/: .env.example  package-lock.json  package.json
dashboard/: .env.example  .gitignore  CLAUDE.md  ecosystem.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
docs/: AGENT.md  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING-DETECTIONS.md  CONTRIBUTING.md  DATA_LEAKAGE_GUIDE.md  DEPLOYMENT.md  DISPOSAL_STRATEGY.md  FRONTEND_MIGRATION_PROGRESS.md  MIGRATION_FAQ.md  MIGRATION_FLOW.md  MIGRATION_GUIDE.md  MULTILINGUAL_REJECT_TEMPLATES.md  PHILOSOPHY.md  POLICY_MODEL.md  REFACTOR_PLAN.md  SYSLOG_INTEGRATION.md  THIRD_PARTY_GATEWAY_INTEGRATION.md  architecture.md
examples/: README.md  demo.py  policy.json  requirements.txt
frontend/: nginx-standalone.conf  nginx.conf  package-lock.json  package.json
gateway/: CLAUDE.md  USAGE.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
integrations/: README.md
integrations/agent/hermes/: README.md  pyproject.toml
integrations/agent/hermes/src/openguardrails_instrumentation_hermes/: __init__.py  bridge.py  platform.py  plugin.yaml  sandbox_guard.py
integrations/agent/hermes/tests/: test_platform.py
integrations/ebpf/sensor/: .gitignore  README.md  pyproject.toml
integrations/ebpf/sensor/bpf/: Makefile  README.md  loader.c  ogr_sensor.bpf.c  ogr_sensor.h
integrations/ebpf/sensor/src/openguardrails_ebpf/: __init__.py  __main__.py  detector.py  events.py  pep.py  sensor.py
integrations/ebpf/sensor/tests/: test_detector.py  test_events.py  test_pep.py  test_sensor.py
integrations/gateway/mitmproxy/: README.md  pyproject.toml  run.py
integrations/gateway/mitmproxy/ogr_mitmproxy/: __init__.py  addon.py  ogr_client.py  pep_identity.py  protocols.py
integrations/gateway/mitmproxy/tests/: test_gateway.py  test_gateway_answer.py  test_gateway_codex_http.py  test_gateway_lifecycle.py  test_pep_identity.py
integrations/gateway/openai-anthropic/: README.md  demo.py  pyproject.toml
integrations/gateway/openai-anthropic/ogr_gateway/: __init__.py  server.py
integrations/gateway/openai-anthropic/ogr_gateway/protocols/: __init__.py  anthropic.py  base.py
integrations/langgraph/: README.md  pyproject.toml
integrations/langgraph/examples/: react_agent_live.py
integrations/langgraph/src/openguardrails_instrumentation_langgraph/: _engine.py  toolnode.py
integrations/langgraph/tests/: test_smoke.py
migrations/: 008_add_billing_system.py  009_fix_risk_level_column_length.py  create_missing_subscriptions.py
moltguard/: .gitignore  CLAUDE.md  README.md  dashboard-launcher.ts  dashboard-manager.ts  gateway-manager.ts  index.test.ts  index.ts  openclaw.plugin.json  package-lock.json  package.json  test-injection.ts  tsconfig.json
openclaw-security/: CLAUDE.md  README.md  dashboard-manager.ts  gateway-manager.ts  index.ts  openclaw.plugin.json  package-lock.json  package.json  test-injection.ts  tsconfig.plugin.json
redteam/: README.md
schema/: approval-receipt.schema.json  guard-event.schema.json  verdict.schema.json
scripts/: Layout.tsx  quick_start.sh  release.sh
services/gateway/: Dockerfile  README.md  policy.json  pyproject.toml
services/gateway/ogr_gateway/: detectors.py  engine.py
services/gateway/ogr_gateway/protocols/: openai.py
services/gateway/tests/: test_engine.py
specification/: attestation.md  composition.md  degraded-mode.md  enrollment-and-receipts.md  guard-event.md  local-redaction.md  overview.md  provenance-and-context.md  taxonomy.md  verdict.md
src/: cli.ts  header.ts  index.ts
standards/: OG-AI-RSMS-001.md  README.md  iso-style.tex  title-page.tex
tests/: bundle.test.ts  cloud-decide.test.ts  cloud-forward.test.ts
website/: README.md
(+516 files in other folders)
