[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openguardrails-instrumentation-hermes"
version = "0.1.2"
description = "Guard a Hermes agent and its sandbox through the OpenGuardrails (OGR) protocol — one policy enforced across the LLM gateway, the agent tool-call hook, and the real sandbox exec."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "OpenGuardrails" }]
keywords = ["ai", "agent", "security", "guardrails", "hermes", "sandbox", "ogr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["openguardrails>=0.1.0"]

[project.optional-dependencies]
# `srt` (Anthropic Sandbox Runtime) is a Node CLI installed via npm, not pip:
#   npm install -g @anthropic-ai/sandbox-runtime
# Listed here only to document the personal-sandbox extra; there is no pip dep.
srt = []

[project.urls]
Homepage = "https://openguardrails.com"
Specification = "https://github.com/openguardrails/openguardrails/tree/main/specification"
Source = "https://github.com/openguardrails/openguardrails/tree/main/integrations/agent/hermes"

[tool.hatch.build.targets.wheel]
packages = ["src/openguardrails_instrumentation_hermes"]
