[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openguardrails-ebpf"
version = "0.1.0"
description = "OpenGuardrails (OGR) reference eBPF sensor — kernel exec/file/network observation mapped to sandbox-altitude GuardEvents, with a userspace PEP that judges against any OGR runtime and enforces by containment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "openguardrails>=0.1.2",
]

[project.urls]
Homepage = "https://openguardrails.com"
Specification = "https://github.com/openguardrails/openguardrails"
Source = "https://github.com/openguardrails/openguardrails/tree/main/integrations/ebpf/sensor"

[project.scripts]
ogr-ebpf = "openguardrails_ebpf.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openguardrails_ebpf"]
